--- a/lamision.html
+++ b/lamision.html
@@ -12,11 +12,33 @@
       <a href="index.html" class="btn-back">← Volver a inicio</a>
     </header>
 
+    <section class="faq">
+      <h1>Preguntas básicas sobre La Misión</h1>
+      <ul>
+        <li><strong>1️⃣ ¿Para qué sirve la aplicación La Misión?</strong><br>
+          La app está pensada para ayudar a personas mayores o con rutinas de salud a recordar tareas importantes como tomar medicación, caminar o asistir a turnos médicos.
+        </li>
 
-    
+        <li><strong>2️⃣ ¿Cómo se crean los recordatorios?</strong><br>
+          Desde la pantalla principal se pueden agregar recordatorios personalizados indicando el tipo de actividad, la hora y una breve descripción.
+        </li>
+
+        <li><strong>3️⃣ ¿Necesito conexión a internet para usarla?</strong><br>
+          No necesariamente. La app guarda los recordatorios localmente, aunque algunas funciones (como sincronización o actualizaciones) requieren conexión.
+        </li>
+
+        <li><strong>4️⃣ ¿Puedo editar o eliminar un recordatorio?</strong><br>
+          Sí. Cada recordatorio puede modificarse o eliminarse fácilmente desde el menú de opciones en la lista principal.
+        </li>
+
+        <li><strong>5️⃣ ¿Para quién está pensada esta aplicación?</strong><br>
+          Está diseñada principalmente para personas mayores o quienes buscan una forma simple y clara de organizar sus recordatorios de salud y bienestar.
+        </li>
+      </ul>
+    </section>
 
     <footer>
-      <small>© 2025 La Misión — Formación Empresarial</small>
+      <small>© 2025 La Misión</small>
     </footer>
   </main>
 </body>
