--- a/index.html
+++ b/index.html
@@ -4,100 +4,111 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>La Misión — Recordatorios de Salud</title>
-  <meta name="description" content="Recordatorios simples para medicación, caminatas, turnos médicos y bienestar. Pensado para personas mayores." />
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="description" content="Recordatorios simples y accesibles para cuidar tu salud y bienestar diario." />
   <meta name="theme-color" content="#2f7cf6" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <a class="skip-link" href="#contenido">Saltar al contenido</a>
 
-  <main class="screen" id="contenido" role="main">
-    <!-- Header -->
+  <!-- ===============================
+       CONTENEDOR PRINCIPAL
+       =============================== -->
+  <main class="app" id="contenido" role="main">
+
+    <!-- HEADER -->
     <header class="header">
-      <strong class="brand">La Misión</strong>
+      <h1 class="brand">🌿 La Misión</h1>
       <nav class="nav">
-        <a class="nav__link" href="#recordatorios">Recordatorios</a>
-        <a class="nav__link" href="#ayuda">Ayuda</a>
-        <a class="nav__link nav__link--btn" href="lamision.html">Preguntas</a>
+        <a href="#inicio" class="nav__link">Inicio</a>
+        <a href="#recordatorios" class="nav__link">Recordatorios</a>
+        <a href="#ayuda" class="nav__link">Ayuda</a>
+        <a href="lamision.html" class="nav__link nav__link--btn">Preguntas</a>
       </nav>
     </header>
 
-    <!-- Hero -->
-    <section class="hero">
-      <h1 class="title">Recordatorios diarios</h1>
-      <p class="lead">Medicación, caminatas, turnos y más — <strong>a tiempo</strong> y sin complicaciones.</p>
+    <!-- HERO PRINCIPAL -->
+    <section id="inicio" class="hero">
+      <div class="hero__content">
+        <h2 class="hero__title">Recordatorios diarios y bienestar</h2>
+        <p class="hero__text">
+          Controlá tus horarios de medicación, caminatas y turnos médicos de forma simple y clara.  
+          Ideal para mantener tus rutinas sin olvidos.
+        </p>
+        <a href="#recordatorios" class="btn btn--big">Ver mis recordatorios</a>
+      </div>
     </section>
 
-    <!-- Recordatorios base -->
-    <section id="recordatorios" class="grid">
-      <article class="item">
-        <h2>💊 Tomá la pastilla a las:</h2>
-        <p class="info">09:00 hs</p>
-      </article>
+    <!-- SECCIÓN RECORDATORIOS -->
+    <section id="recordatorios" class="section">
+      <h2 class="section__title">🕒 Tus recordatorios de hoy</h2>
 
-      <article class="item">
-        <h2>🚶 Salir a caminar a las:</h2>
-        <p class="info">17:30 hs</p>
-      </article>
+      <div class="grid">
+        <article class="card">
+          <h3>💊 Medicación</h3>
+          <p class="info">Tomar la pastilla a las <strong>09:00 hs</strong></p>
+        </article>
 
-      <article class="item">
-        <h2>🩺 Turno médico</h2>
-        <p class="info">Martes 15 de octubre · 10:00 hs<br><span class="muted">Centro Médico Santa Cruz</span></p>
-      </article>
+        <article class="card">
+          <h3>🚶 Caminata</h3>
+          <p class="info">Salir a caminar a las <strong>17:30 hs</strong></p>
+        </article>
 
-      <article class="item">
-        <h2>🏋️ Recordatorio de entrenar</h2>
-        <p class="info">18:00 hs</p>
-      </article>
+        <article class="card">
+          <h3>🍽️ Almuerzo</h3>
+          <p class="info">12:30 hs · Recordatorio diario</p>
+        </article>
+
+        <article class="card">
+          <h3>📞 Llamar a Ana Fernández</h3>
+          <p class="info">15:00 hs</p>
+          <div class="actions">
+            <a href="tel:+5492911234567" class="btn">Llamar</a>
+          </div>
+        </article>
+      </div>
     </section>
 
-    <!-- Bienestar -->
-    <section id="bienestar" class="grid">
-      <article class="item">
-        <h2>💧 Tomar agua</h2>
-        <p class="info">Cada 2 horas · Recordatorio suave</p>
-      </article>
-
-      <article class="item">
-        <h2>📞 Llamar a un familiar</h2>
-        <p class="info">Ana Fernández · 15:00 hs</p>
-        <div class="actions">
-          <a class="btn" href="tel:+5492911234567">Llamar</a>
-        </div>
-      </article>
-
-      <article class="item">
-        <h2>🍽️ Hora del almuerzo</h2>
-        <p class="info">12:30 hs · Recordatorio diario</p>
-      </article>
-
-      <article class="item">
-        <h2>🌿 Respiración</h2>
-        <p class="info">3 minutos de relajación · 19:00 hs</p>
-      </article>
+    <!-- SECCIÓN BIENESTAR -->
+    <section id="bienestar" class="section">
+      <h2 class="section__title">🌿 Bienestar y hábitos</h2>
+      <div class="grid">
+        <article class="card">
+          <h3>💧 Tomar agua</h3>
+          <p class="info">Cada 2 horas · Recordatorio suave</p>
+        </article>
+        <article class="card">
+          <h3>🧘 Respiración</h3>
+          <p class="info">3 minutos de relajación · 19:00 hs</p>
+        </article>
+      </div>
     </section>
 
-    <!-- Emergencia -->
-    <section class="grid grid--wide">
-      <article class="item emergency">
+    <!-- SECCIÓN EMERGENCIA -->
+    <section id="emergencia" class="emergency">
+      <div class="emergency__inner">
         <h2>🚨 Emergencia</h2>
+        <p>Si necesitás ayuda inmediata, usá los botones de abajo:</p>
         <div class="actions actions--stack">
-          <a class="btn btn--alert" href="tel:911">Llamar al 911</a>
-          <a class="btn btn--alert" href="tel:+5492910000000">Llamar a familiar</a>
+          <a href="tel:911" class="btn btn--alert">Llamar al 911</a>
+          <a href="tel:+5492910000000" class="btn btn--alert">Llamar a un familiar</a>
         </div>
-      </article>
+      </div>
     </section>
 
-    <!-- Ayuda -->
+    <!-- SECCIÓN AYUDA -->
     <section id="ayuda" class="help">
       <h2>🧭 ¿Necesitás ayuda?</h2>
-      <p>Llamanos al <a href="tel:+5492911234567">+54 9 291 123-4567</a> o escribinos a
-      <a href="mailto:hola@lamision.app">hola@lamision.app</a></p>
+      <p>
+        Podés llamarnos al <a href="tel:+5492911234567">+54 9 291 123-4567</a>  
+        o escribirnos a <a href="mailto:hola@lamision.app">hola@lamision.app</a>
+      </p>
     </section>
 
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer class="footer">
-      <small class="muted">Tus datos se guardan en tu dispositivo. Podés borrarlos cuando quieras.</small>
+      <small>© 2025 La Misión — Tus datos se guardan localmente.</small>
     </footer>
   </main>
 </body>
