--- a/lamision.html
+++ b/lamision.html
@@ -13,7 +13,7 @@
     </header>
 
     <section class="faq">
-      <h1>Preguntas básicas sobre La Misión</h1>
+      <h1>Preguntas</h1>
       <ul>
         <li><strong>1️⃣ ¿Para qué sirve la aplicación La Misión?</strong><br>
           La app está pensada para ayudar a personas mayores o con rutinas de salud a recordar tareas importantes como tomar medicación, caminar o asistir a turnos médicos.
